Wed Aug 23 16:55:35 1995  Michael Meissner  <meissner@tiktok.cygnus.com>

	* config/powerpc/ppc{,le}-eabi.mt (SIM_OBJS, SIM): Link in the
	PowerPC simulator.

Tue Aug 22 02:00:47 1995  Jeff Law  (law@snake.cs.utah.edu)

	* tm-hppa.h (EXTRACT_RETURN_VALUE): Fix for FP values.

	* tm-hppa.h (STORE_RETURN_VALUE): Fix to work with -msoft-float
	calling conventions too.  Use the TYPE of the return value, not
	its length to determine if it should also be copied into the
	floating point registers.

	* tm-hppa.h (PROLOGUE_FIRSTLINE_OVERLAP): Delete.  Causes more
	problems than it fixes.
	* hppa-tdep.c (skip_prologue): If we exit the main loop without
	finding all the register saves, retry again without looking for
	the registers we could not find the first time.

Mon Aug 21 23:39:56 1995  Jeff Law  (law@snake.cs.utah.edu)

	* hppa-tdep.c (frame_chain_valid): Handle systems where "$START$"
	calls "main" directly.
	(skip_prologue): Always assume arguments were saved into the stack
	since GCC will do so without setting the magic Args_Saved bit in
	the unwind descriptor.

Mon Aug 21 11:49:17 1995  Kung Hsu  <kung@mexican.cygnus.com>

	* remote-udi.c (udi_wait): Mask off high bits of stop reason.
	* remote-udi.c (fetch_register): For unfetchable regs, pretend it's
	done. Fix a bug.

Mon Aug 21 00:45:17 1995  Jeff Law  (law@snake.cs.utah.edu)

	* Makefile.in (install): Remove "brokensed" hack, unnecessary now
	that we're using autoconf.
	(uninstall): Likewise.

Sat Aug 19 17:20:22 1995  Michael Tiemann  <tiemann@axon.cygnus.com>

	* gdbtk.tcl: ENABLE comes back as "1" or "0", not "enable" or
	"disable".
	Also, wire up the breakpoint window so that it can be demo'd.
	
Sat Aug 19 01:19:34 1995  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* gdbtypes.c (recursive_dump_type):  Add dont_print_type_obstack
	to inhibit infinite recursion when printing aggregate types.

Fri Aug 18 17:48:55 1995  steve chamberlain  <sac@slash.cygnus.com>
